fix: hide sidebar scrollbar to fix active indicator alignment in Chrome

--- a/packages/theme/src/styles/nav.css
+++ b/packages/theme/src/styles/nav.css
@@ -7,7 +7,7 @@
   /* we want full width sidebar highlights on hover */
   padding-left: 0 !important;
   padding-right: 0 !important;
-  scrollbar-width: thin;
+  scrollbar-width: none;
 }
 
 /* Nav items */
